# hdr-sdk

./: .gitignore  CMakeLists.txt  main.cpp
hdr/: CMakeLists.txt
hdr/include/hdr/: hdr_lib.hpp  hdrlib_temporal_tonemap_durand.hpp  hdrlib_tonemap_durand.hpp  hdrlib_tonemap_intf.hpp  hdrlib_tonemap_reinhard05.hpp
hdr/src/: hdrlib_temporal_tonemap_durand.cpp  hdrlib_tonemap_durand.cpp  hdrlib_tonemap_reinhard05.cpp
